# crazyflie-ros-navigation

./: README.md
crazyflie_goal_follower/: package.xml  setup.cfg  setup.py
crazyflie_goal_follower/config/: crazyflies_lighhouse.yaml
crazyflie_goal_follower/crazyflie_goal_follower/: goal_follower_node.py  service_compat.py  waypoint_publisher_node.py
crazyflie_goal_follower/launch/: goal_follower.launch.xml  goal_follower_real.launch.xml
crazyflie_goal_follower/maps/: greenhouse_map.pgm  greenhouse_map.yaml  greenhouse_map_middle_rack_out_and_back_20cm.ppm  greenhouse_map_waypoints_full_overlay.ppm  launch.sh  prompt.txt  waypoints.txt  waypoints_full.txt
crazyflie_ros2_test/: package.xml  setup.cfg  setup.py
crazyflie_ros2_test/crazyflie_ros2_test/: test_node.py
