<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crazyflie_goal_follower</name>
  <version>0.0.0</version>
  <description>Goal follower node for Crazyflie using go_to/takeoff services.</description>
  <maintainer email="argonaut@todo.todo">argonaut</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>crazyflie_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
